Teste das Casas

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="welcome-container">
         <h1>Bem-vindo à Academia do Apocalipse</h1>
         <p>Descubra a que Cavaleiro você realmente vai servir...</p>
-        <a href="index.html">
+        <a href="=questionario.html">
             <button>Iniciar Teste</button>
         </a>
     </div>
